styles.css
@import url('https://fonts.googleapis.com/css?family=Baloo');

html {
    font-family: 'Baloo', cursive;
    background-color: #E5E4E2;
}
body {
    margin: 0;
}
#header-container {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 540px;
}
#icons {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}
.middle {
    margin: 0px 7px;
}
.icon-link {
    color: black;
    position: relative;
}
.icon-link:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    background-color: black;
    visibility: hidden;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
}
.icon-link:hover:before {
    visibility: visible;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}
#header-text {
    font-size: 125px;
}
#header-text-row {
    height: 150px;
    padding-right: 2px;
}
#header-subtext-row {
}
.down {
    text-align: center;
}
h1 {
    border-radius: 30px;
    font-size: 20px;
    border: 3px solid black;
    padding: 10px 20px;
    opacity: 0;
}
h2 {
    border-radius: 30px;
    font-size: 20px;
    border: 3px solid black;
    padding: 10px 20px;
}
.fa-github, .fa-instagram, .fa-linkedin-square {
    opacity: 0;
}
.ghost {
    width: 64px;
    height: 64px;
    border-radius: 50%;
    background-color: black;
    display: inline-block;
    position: relative;
    overflow: none;
}
.eye {
    width: 5px;
    height: 10px;
    border-radius: 50%;
    background-color: white;
    position: absolute;
    -webkit-animation-name: blink;
    -webkit-animation-duration: 3s;
    -webkit-animation-iteration-count: infinite; 
    -webkit-transform-origin: 50%;
    animation-name: blink;
    animation-duration: 3;
    animation-iteration-count: infinite; 
    transform-origin: 50%;
}
.eye-l {
    top: 13px;
    left: 12px;
}
.eye-r {
    top: 13px;
    left: 24px;
}
@-webkit-keyframes blink { 
    0% { -webkit-transform: scaleX(1) scaleY(1); } 
    1% { -webkit-transform: scaleX(1.3) scaleY(0.1); } 
    2% { -webkit-transform: scaleX(1) scaleY(1); } 
    60% { -webkit-transform: scaleX(1) scaleY(1); } 
    61% { -webkit-transform: scaleX(1.3) scaleY(0.1); } 
    62% { -webkit-transform: scaleX(1) scaleY(1); } 
    100% { -webkit-transform: scaleX(1) scaleY(1); }
}
@keyframes blink { 
    0% { transform: scaleX(1) scaleY(1); } 
    1% { transform: scaleX(1.3) scaleY(0.1); } 
    2% { transform: scaleX(1) scaleY(1); } 
    60% { transform: scaleX(1) scaleY(1); } 
    61% { transform: scaleX(1.3) scaleY(0.1); }  
    62% { transform: scaleX(1) scaleY(1); } 
    100% { transform: scaleX(1) scaleY(1); }
}
footer {
    background-color: black;
    color: white;
    text-align: center;
    padding: 5px;
    margin-top: 50px;
}
* {
    box-sizing: border-box;
}
.row::after {
    content: "";
    clear: both;
    display: table;
}
[class*="col-"] {
    float: left;
}
/*for mobile*/
[class*="col-"] {
    width: 100%;
}
/*for desktop*/
@media only screen and (min-width: 600px) {
    .col-1 {width: 8.33%;}
    .col-2 {width: 16.66%;}
    .col-3 {width: 25%;}
    .col-4 {width: 33.33%;}
    .col-5 {width: 41.66%;}
    .col-6 {width: 50%;}
    .col-7 {width: 58.33%;}
    .col-8 {width: 66.66%;}
    .col-9 {width: 75%;}
    .col-10 {width: 83.33%;}
    .col-11 {width: 91.66%;}
    .col-12 {width: 100%;}
    #header-container {height: 625px;}
}
#hamburger {
    position: fixed;
    top: 10px;
    right: 15px;
    cursor: pointer;
    z-index: 9999;
}
.bar1, .bar2, .bar3 {
    width: 35px;
    height: 5px;
    background-color: black;
    margin: 6px 0;
    transition: 0.5s;
}
.change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
    transform: rotate(-45deg) translate(-9px, 6px) ;
}
.change .bar2 {
    opacity: 0;
}
.change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
    transform: rotate(45deg) translate(-8px, -8px) ;
}
.full-menu {
    visibility: hidden;
    display: table;
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    background-color: rgba(255, 255, 255, 0.92);
    -webkit-transform: scale(0.85);
    -ms-transform: scale(0.85);
    transform: scale(0.85);
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
    z-index: 9998;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    align-items: center;
    justify-content: center;
}
.full-menu-open {
    visibility: visible;
    opacity: 1;
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
}
.main-nav {
    font-size: 30px;
    padding: 0;
    list-style-type: none;
    text-align: center;
}
.menu-link {
    text-decoration: none;
    color: black;
    position: relative;
}
.menu-link:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 3px;
    bottom: 0;
    background-color: black;
    visibility: hidden;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
}
.menu-link:hover:before {
    visibility: visible;
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}
.menu-item {
    margin: 15px 0px;
}
#about-me {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 50px;
    margin-bottom: 50px;
    height: 700px;
    background-color:;
}
.image {
    border: 3px solid black;
    height: 160px;
    width: 160px;
    border-radius: 50%;
}
.stick {
    margin-top: -18px;
    height: 35px;
    width: 3px;
    background-color: black;
}
.going-down {
    margin: -10px 0px;
}
#descrip {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-color:;
}

